alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_03_empty_string.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
error: invalid character
 | 
 | 
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   minimal alpm-package-version: ()
   └ alpm-pkgver: ()
     → invalid character
     → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
