alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_07_no_pkgrel_dash_end.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
error: invalid minimal alpm-package-version
 | 
 | 1.0.0-
 |      ^
 | 
 = while parsing:
   minimal alpm-package-version: (-)
   → The package version must end after the alpm-pkgver
