alpm-types/src/version/snapshots/requirement::invalid_version_requirement@case_1_bad_operator.snap
---
source: alpm-types/src/version/requirement.rs
---
error: invalid comparison operator
 | 
 | <>3.1
 | ~^ expected one of: '<=', '>=', '=', '<', '>'
 | 
 = while parsing:
   version requirement: (<>3.1)
   → invalid comparison operator
   → expected one of: '<=', '>=', '=', '<', '>'
